# snake

./: Cargo.toml  index.html
.github/workflows/: release-android-google-play.yaml  release-ios-testflight.yaml  release.yaml
mobile/: Cargo.toml  Makefile  manifest.yaml
mobile/mobile.xcodeproj/: project.pbxproj
mobile/src/: lib.rs
src/: camera.rs  components.rs  control.rs  diplopod.rs  events.rs  food.rs  gameover.rs  graphics.rs  highscore.rs  lib.rs  main.rs  menu.rs  player_input.rs  resources.rs  setup.rs  systems.rs  wall.rs
src/camera/: setup.rs
src/diplopod/: setup.rs
src/food/: setup.rs  spawn.rs
src/graphics/: antidote.rs  diplopod_segments.rs  food.rs  poison.rs  superfood.rs  wall.rs
src/systems/: gameover.rs
src/wall/: setup.rs
