[package]
name = "snake"
version = "0.1.0"
publish = false
authors = ["Mikael Hultgren"]
edition = "2024"
exclude = ["dist", "build", "assets", "credits"]

[workspace]
members = ["mobile"]

[lints.clippy]
# Bevy supplies arguments to systems via dependency injection, so it's natural for systems to
# request more than 7 arguments, which would undesirably trigger this lint.
too_many_arguments = "allow"
# Queries may access many components, which would undesirably trigger this lint.
type_complexity = "allow"
# Make sure macros use their standard braces, such as `[]` for `bevy_ecs::children!`.
nonstandard_macro_braces = "warn"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

# This is used by trunk as it doesn't support custom profiles: https://github.com/trunk-rs/trunk/issues/605
# xbuild also uses this profile for building android AABs because I couldn't find a configuration for it
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

# Profile for distribution
[profile.dist]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
strip = true

[features]
dev = ["bevy/dynamic_linking"]

[dependencies]
bevy = { version = "0.16.0" }
bevy_asset_loader = { version = "0.23" }
webbrowser = { version = "1", features = ["hardened"] }
anyhow = "1"
bevy_embedded_assets = "0.13"
directories = "6"
rand = "0.9.0"

# keep the following in sync with Bevy's dependencies
winit = { version = "0.30", default-features = false }
image = { version = "0.25", default-features = false }
## This greatly improves WGPU's performance due to its heavy use of trace! calls
log = { version = "0.4", features = [
    "max_level_debug",
    "release_max_level_warn",
] }

[build-dependencies]
embed-resource = "3"
