[package]
name = "mobile"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "mobile"
crate-type = ["staticlib", "cdylib"]

[dependencies]
snake = { path = ".." }
bevy = { version = "0.16.0", default-features = false, features = [
    "android-native-activity",
] }

[package.metadata.android]
package = "me.nikl.snake"
apk_name = "Snake"
assets = "../assets"
strip = "strip"
resources = "../build/android/res"
build_targets = ["aarch64-linux-android"]

[package.metadata.android.sdk]
target_sdk_version = 33

[package.metadata.android.application]
icon = "@mipmap/icon"
label = "Snake"
